--- a/examples/abtesting-proportions.ipynb
+++ b/examples/abtesting-proportions.ipynb
@@ -27,20 +27,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Simulation parameters\n",
     "control_rate = 0.10    # 10% baseline conversion\n",
-    "treatment_rate = 0.35  # 20% treatment conversion\n",
+    "treatment_rate = 0.35  # 35% treatment conversion\n",
     "batch_size = 100       # Users per batch\n",
     "n_batches = 50        # Number of batches to simulate\n",
     "\n",
     "# Test H0: p1 = p2 vs H1: p1 > p2\n",
     "prop_test = SequentialTest(\n",
     "    test_type=\"proportion\",\n",
-    "    null_value=0.1,  # H0: p_treatment = p_control\n",
+    "    null_value=control_rate,  # H0: p_treatment = p_control\n",
     "    alternative=\"greater\"  # H1: p_treatment > p_control\n",
     ")\n"
    ]
