--- a/expectation/conformal/demo.ipynb
+++ b/expectation/conformal/demo.ipynb
@@ -1103,6 +1103,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conformal CUSUM - maintaining validity but losing sensitivity\n",
+    "\n",
+    "Below plots shows how regular e-values are highly sensitive to small changes but might produce high false alarm rate <br>\n",
+    "compared to conformal e-values. The conformal e-values, however, favors validity under the null and loses sensitivity to small changes <br>\n",
+    "so the false alarm rate is valid!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
