--- a/examples/conformal-evalues.ipynb
+++ b/examples/conformal-evalues.ipynb
@@ -2,18 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "os.chdir(\"/Users/a1002142/Desktop/private_repo/expectation/\")\n",
+    "\n",
     "from expectation.seqtest.sequential_e_testing import SequentialTest, TestType\n",
     "from expectation.utils.helper_functions import plot_sequential_test\n",
     "\n",
     "import numpy as np\n",
     "\n",
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# EXPERIMENTAL: testing conformal e-values and conformal CUSUM"
    ]
   },
   {
